--- a/client/index.html
+++ b/client/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Codeboard Screen Cast</title>
+    <title>Screen Cast</title>
 
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
     <div class="header">
-        Screen Share
+        REMOTE VIEW
     </div>
     <div class="code" id="code"></div>
 
